Fix footer sizing/spacing

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -172,11 +172,8 @@ h1 {
 #footer {
     position: fixed;
     bottom: 0;
-    width: 100%;
     user-select: none;
-    padding-left: 15px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding: 10px 15px;
     font-size: 0;
 }
 
